# bdk-coin-select-simulation

./: Cargo.toml  LICENSE  README.md  requirements.txt  simulate.sh
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
simulation_results/: full_results.csv  inputs.csv  results.csv  utxos.csv
src/: input_types.rs  main.rs  models.rs  output_types.rs  simulator.rs
src/selectors/: bdk.rs  mod.rs  rust_coinselect.rs
src/selectors/python/: bitcoin_coin_selection.rs  mod.rs  python_coin_select.py
