[package]
name = "bdk-coin-select-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_coin_select = { git = "https://github.com/bitcoindevkit/coin-select.git", branch = "master" }
rust-coinselect = { git = "https://github.com/Bitshala-Incubator/rust-coinselect.git", branch = "main" }
bitcoin = "0.31.1"
csv = "1.3.0"
serde = { version = "1.0.197", features = [ "derive" ] }
statistical = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
